# cmake-initializer

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: main.yml
.woodpecker/: build.yaml  release.yaml  test-main.yaml  test.yaml
.woodpecker-tmp/: test.yaml
.woodpecker/scripts/test/: common.ps1  emscripten.sh  macos.sh  setup-clang-unix-x86.sh  setup-emscripten.sh  setup-unix.sh  unix.sh  windows.ps1
base/: CMakeLists.txt
base/project_config/: CMakeLists.txt
base/project_config/_config/: config.hpp.in
base/project_config/cmake/: CreateConfigFile.cmake
cmake/modules/: CheckSanitizerSupport.cmake  LoadEnvVariable.cmake  PreventInSourceBuilds.cmake  SetupCommonProjectOptions.cmake  StaticAnalysis.cmake  StringListInterpolation.cmake  TargetExceptions.cmake
cmake/project/: Initialization.cmake  Options.cmake  Variables.cmake
cmake/project/impl/: PresetConfig.cmake  ProjectBoilerplate.cmake  Toolchains.cmake
cmake/toolchains/emscripten/: EmsdkManager.cmake
docs/: CDASH_INTEGRATION.md  CICD_PIPELINE.md  CMAKE_VARIABLES.md
project/: .clang-tidy  CMakeLists.txt  CMakePresets.json  CTestScript.cmake  ProjectMetadata.cmake  Projects.cmake
project/base/project_common/: CMakeLists.txt
project/cmake/modules/: CheckSanitizerSupport.cmake  CompilerWarnings.cmake  EnableInterproceduralOptimization.cmake  GetCurrentCompiler.cmake  InstallComponent.cmake  LinkDependencies.cmake  LoadEnvVariable.cmake  PreventInSourceBuilds.cmake  SetupCommonProjectOptions.cmake  StaticAnalysis.cmake  StaticLinking.cmake  StringListInterpolation.cmake  SwitchOnCompiler.cmake  SystemLink.cmake  TargetDebugOptions.cmake  TargetExceptions.cmake  TargetHardening.cmake  TargetSanitizers.cmake
project/cmake/project/: Initialization.cmake  Options.cmake  (+1 more)
project/samples/: CMakeLists.txt
samples/: CMakeLists.txt
samples/hello_emscripten/: CMakeLists.txt  custom_template.html
samples/hello_packages/: CMakeLists.txt  Dependencies.cmake
samples/hello_static_library/: CMakeLists.txt
samples/hello_testing_frameworks/: CMakeLists.txt
samples/hello_testing_frameworks/include/: math_utils.hpp
samples/hello_testing_frameworks/src/: math_utils.cpp
samples/hello_testing_frameworks/tests/: CMakeLists.txt  test_doctest.cpp  test_gtest.cpp
samples/hello_world/: CMakeLists.txt
scripts/: build.ps1  clean.ps1  format.ps1  install.ps1  test.ps1
scripts/ci/: README.md  submit-cdash.ps1
(+49 files in other folders)
